Various small fixes and clarifications
